# lightshow

./: Cargo.toml  README.md
.claude/: settings.local.json
docs/: PROTOCOL_gigabyte_gpu_rgb_fusion2.md  PROTOCOL_gigabyte_rgb_fusion2.md  PROTOCOL_gskill_ddr5.md
src/: backend.rs  cli.rs  main.rs  nvapi.rs  pawnio.rs
src/backends/: gigabyte_gpu.rs  gigabyte_mobo.rs  gskill_ddr5.rs  mod.rs
